# 4Hammer

./: CMakeLists.txt  LICENSE  README.md  README2.md  export_presets.cfg  icon.svg.import  project.godot  trace.txt
doc/: board.html  board.md  rules.html  rules.md  stats.html  stats.md  units.html  units.md  vector2d.html  vector2d.md  weapons.html  weapons.md
examples/: engine_driver.py  graphical_engine_driver.py  gym_jit_example.py  llm_to_engine.py  single_shooting_maximize.rl  single_turn.rl  use_rules_from_python.py
graphs/: automatic_analysis.png.import  djinn.dot  game_design_iterations.dot  game_design_iterations.png.import  game_design_iterations_automatized.dot
imgs/: Kriegsspiel_1824.jpg.import  ModelsLeft.png.import  RLC_logo.png.import  Reward.png.import  a4678acd-4ede-4eb8-92a8-249145b7b1bf.webp.import  editor.png.import  skirmish.png.import
scenes/: Model.gd  Popup.tscn  UI.tscn  UnitName.tscn  all_actions_panel.tscn  circle.tres  event_bar_message.tscn  interaction_manager.tscn  itmes.tscn  main.tscn  model.tscn  objective.tscn  table_quad.tscn
scripts/: AcceptRejectAction.gd  AllActionsPanel.gd  CameraControls.gd  CurrentActionLabell.gd  InteractionManager.gd  MultipleChoises.gd  NextActionButton.gd  RollDiceButton.gd  Rules.gd  SelectPointManager.gd  Spawner.gd  Tooltip.gd  TraceManager.gd  UI.gd  UnitName.gd  boardl.gd  game_content.gd  headless_server.gd  itmes.gd  llm_thoughts.gd  objective.gd  reset_button.gd  right_bar.gd  save_state.gd  server.gd
src/: board.rl  full_game.rl  game_utils.rl  gdexample.cpp  rlc_runtime.c  rules.gdextension  rules.rl  scenario.rl  stats.rl  units.rl  vector2d.rl  weapons.rl
tools/: open_server.py
